/*
 * Copyright 2023 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package tsunami.plugins.detector.credentials.genericweakcredentialdetector.proto;

option java_multiple_files = true;
option java_outer_classname = "TargetServiceProtos";
option java_package = "com.google.tsunami.plugins.detectors.credentials.genericweakcredentialdetector.proto";

/**
 * Capturing all the known services the generic weak credential detector
 * supports. The original set of target services come from Ncrack.
 *
 * Next ID: 25
 */

enum TargetService {
  TARGET_SERVICE_UNSPECIFIED = 0;
  SSH = 1;  // SSH (Encrypted Remote Administration Protocol)
  RDP =
      2;  // Remote Desktop Protocol (Graphical Remote Administration Protocol)
  FTP = 3;        // File Transfer Protocol (Remote File Sharing)
  TELNET = 4;     // Telnet (Cleartext Remote Administration Protocol)
  WORDPRESS = 5;  // Content Management System (Web Application)
  JOOMLA = 6;     // Content Management System (Web Application)
  HTTP = 7;       // HTTP Form (Digest, Basic authentication modes)
  POP3 = 8;       // Post Office Protocol (Email Protocol)
  IMAP = 9;       // Internet Message Access Protocol (Email Protocol)
  CVS = 10;       // Concurrent Versioning System (Source Code Versioning)
  SMB = 11;   // Server Message Block (File, Printer and serial ... port sharing
              // protocol)
  SMB2 = 12;  // Server Message Block v2 (File, Printer and serial ... port
              // sharing protocol)
  VNC = 13;   // VNC (Graphical Remote Administration Protocol)
  SIP = 14;   // Session Initiation Protocol (Telephony and VoIP protocol)
  REDIS = 15;    // Redis (In-memory Database)
  PSQL = 16;     // Postgres SQL (SQL Database)
  MYSQL = 17;    // MySQL (SQL Database)
  MSSQL = 18;    // Microsoft SQL (SQL Database)
  MQTT = 19;     // Message Queueing Telemetry Transport (Pub/Sub M2M protocol)
  MONGODB = 20;  // Mongo DB (NoSQL Database)
  CASSANDRA = 21;  // Apache Cassandra (NoSQL Database)
  WINRM = 22;      // Windows Remote Management (Remote Administration Protocol)
  OWA = 23;        // Outlook Web App (Web Application)
  DICOM = 24;      // Digital Imaging and Communications in Medicine (Healthcare
                   // Protocol)
  HIVE = 25;       // Apache Hive (SQL Database)
}
